--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
+    "react-hook-form": "^6.0.4",
     "react-html-parser": "^2.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
