--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "reactstrap": "^8.5.1",
     "sweetalert2": "^9.17.0"
   },
